# Lab_15

./: CMakeLists.txt  README.md  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix_tasks/: matrix_tasks.c  matrix_tasks.h
libs/data_structures/matrix_tasks_test/: matrix_tasks_test.c  matrix_tasks_test.h
libs/data_structures/matrix_test/: matrix_test.c  matrix_test.h
